--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Welocme to Accio Jobs!</h1>
+	<h1>Welocme to AccioJob</h1>
     <script type="text/javascript" src="./script.js">
 </script>
 
